--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,4 @@
-body {font-family:Arial,Helvetica,sans-serif;font-size:12px;background:#7ABDF0 url(images/bodyBackground.jpg) repeat-x;margin:0;padding:0;text-align:center;color:#666}
+body {font-family:Arial,Helvetica,sans-serif;font-size:12px;background:#7ABDF0 url(/assets/bodyBackground.jpg) repeat-x;margin:0;padding:0;text-align:center;color:#666}
 .inner_copy {border:0;color:#f00;float:left;width:50% !important;margin:-100% 0 0 0;overflow:hidden;line-height:0;padding:0;font-size:11px}
 .fleft {float:left}
 .fright  {float:right}
@@ -9,13 +9,13 @@ a:link {color:#627cb9;text-decoration:underline}
 a:hover {text-decoration:none;color:#627cb9}
 a:visited {color:#627cb9}
 #container {width:780px;background:#fff;margin:0 auto;border-left:8px solid #fff;border-right:8px solid #fff;text-align:left;} 
-#header {background:#ddd url(images/headerBackground.jpg) ;width:780px;height:286px;padding:0;} 
+#header {background:#ddd url(/assets/headerBackground.jpg) ;width:780px;height:286px;padding:0;} 
 #header h1 {margin:0 15px;padding:20px 0 0 0;color:#fff}
 #header h4 {color:#fff;margin:0 15px;padding:0}
 #mainContent {margin:0 230px 0 10px;} 
 .date {text-align:right;color:#ED7D96;font-size:11px}
 .date a {color:#ED7D96}
-#footer {padding-top:20px;background:#ddd url(images/footerBackground.jpg) repeat-x;height:48px} 
+#footer {width:760px; padding-top:20px;background:#ddd url(/assets/footerBackground.jpg) repeat-x;height:48px} 
 #footer p {margin:0 auto;padding:0;text-align:center;font-size:10px}
 .clearfloat {clear:both;height:0;font-size:1px;line-height:0}
 /* begining MAIN TOP MENU */
@@ -28,10 +28,10 @@ a:visited {color:#627cb9}
 #sidebar1 {float:right;width:215px;padding:15px 0;}
 #sidebar1 p {margin-left:10px;margin-right:10px}
 h3 {margin:0;padding:0}
-#sidebar1 h3 {width:190px;height:29px;font-size:14px;font-weight:bold;padding-left:25px;padding-top:10px;color:#fff;background:url(images/title.jpg) no-repeat}
+#sidebar1 h3 {width:190px;height:29px;font-size:14px;font-weight:bold;padding-left:25px;padding-top:10px;color:#fff;background:url(/assets/title.jpg) no-repeat}
 .title_back ul {margin:0;padding:0}
 #sidebar1 ul {list-style:none;margin-bottom:10px;padding-top:10px}
-#sidebar1 .title_back {background:url(images/title_back.jpg) no-repeat top}
+#sidebar1 .title_back {background:url(/assets/title_back.jpg) no-repeat top}
 #sidebar1 li {padding:7px;padding-left:20px}
 .bot {padding:10px}
 #calendar {padding:20px 10px 20px 10px}
