add new information

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,6 +23,13 @@
 		</p>
 
 	<p><img src="/assets/title2.jpg" width="500" height="350" alt="Мембранная кровля"></p>
+	
+	<p>В настоящее время европейские и российские производители предлагают три вида мембран, которые отличаются своим составом, способом укладки и цветовой гаммой.</p>
+   <ul>
+     <li>ТПО-мембраны;</li>
+     <li>ПВХ-мембраны;</li>
+     <li>ЭПДМ-мембраны.</li>
+   </ul>
 		<!-- <h2>Your Flash Site will be look professional!</h2>
 		<p>
 			An extensive number of <strong>unique Flash Templates</strong> is at your service. All templates on our site were created specially for you! Our independent designers created flash professional templates. Also our templates are unique. It means you can use our flash templates to create your own site!
