--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,39 +28,42 @@
 	<div id="navcontainer">
 		<ul id="navlist">
 			<li ><a href="/">Главная</a></li>
-			<li><a href="/mounting">Мембранная кровля</a></li>
+			<li><a href="/gratitude">Благодарности</a></li>
 			<li><a href="/telephone">Контакты</a></li>
 		</ul>
 	</div><div class="inner_copy"></div>
 <!-- / #navcontainer -->
 <!-- #sidebar1 -->
 	<div id="sidebar1">
-		<h3>Sites for Webmasters</h3>
+		<h3><a href="pvh">ПВХ мембраны:</a></h3>
 		<div class="title_back">	
 			<ul>
-				<li class="sub"><a href="http://templates.cooltemplates.ru/Probujdenie/index.html#">Free Css Templates</a></li>
-				<li class="sub"><a href="http://templates.cooltemplates.ru/Probujdenie/index.html#">Free Flash Templates</a></li>
-				<li class="sub"><a href="http://templates.cooltemplates.ru/Probujdenie/index.html#">Free Web Templates</a></li>
+				<li class="sub">ТехноНиколь</li>
+				<li class="sub">Пластфоил</li>
+				<li class="sub">Carlisle</li>
+				<li class="sub">Bauder</li>
+				<li class="sub">Sica</li>
 			</ul>
 		</div>	
-		<h3>Company News</h3>
+		<h3><a href="tpo">ТПО мембраны:</a></h3>
 		<div class="title_back">	
 			<ul>
-				<li>
-					<h4>June 2, 2008</h4>
-					<p><a href="http://templates.cooltemplates.ru/Probujdenie/index.html#"> Duis tempor posuere diam. Suspendisse vel tellus quis nunc malesuada porta. …</a></p>
-				</li>
-				<li>
-					<h4>June 12, 2008</h4>
-					<p><a href="http://templates.cooltemplates.ru/Probujdenie/index.html#">Tempus Duis tempor posuere diam. Suspendisse vel tellus quis nunc malesuada porta. …</a></p>
-				</li>
+
+				<li class="sub">ТехноНиколь</li>
+				<li class="sub">Carlisle</li>
+				<li class="sub">Bauder</li>
+				<li class="sub">Sica</li>
+				<li class="sub">Restone</li>
 			</ul>
 		</div>
-		<h3>Calendar</h3>
+		<h3><a href="epdm">ЭПДМ мембраны:</a></h3>
 		<div class="title_back">	
-			<div id="calendar">
+			<ul>
 
-			</div>
+				<li class="sub">Carlite</li>
+				<li class="sub">Firestone</li>
+				<li class="sub">Эластокров</li>
+			</ul>
 		</div>
 	</div>
 
