--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -4,7 +4,7 @@ body {font-family:Arial,Helvetica,sans-serif;font-size:12px;background:#7ABDF0 u
 .fright  {float:right}
 .fcenter {float:none;margin:0 auto;width:96%}
 .fclear {clear:both}
-h1, h2, h3 {font-family:Georgia,"Times New Roman",Times,serif;color:#000}
+h1, h2, h3 {font-family:Georgia,"Times New Roman",Times,serif;color:black}
 a:link {color:#627cb9;text-decoration:underline}
 a:hover {text-decoration:none;color:#627cb9}
 a:visited {color:#627cb9}
@@ -28,7 +28,7 @@ a:visited {color:#627cb9}
 #sidebar1 {float:right;width:215px;padding:15px 0;}
 #sidebar1 p {margin-left:10px;margin-right:10px}
 h3 {margin:0;padding:0}
-#sidebar1 h3 {width:190px;height:29px;font-size:14px;font-weight:bold;padding-left:25px;padding-top:10px;color:#fff;background:url(/assets/title.jpg) no-repeat}
+#sidebar1 h3 {width:190px;height:29px;font-size:14px;font-weight:bold;padding-left:25px;padding-top:10px;color:black;background:url(/assets/title.jpg) no-repeat}
 .title_back ul {margin:0;padding:0}
 #sidebar1 ul {list-style:none;margin-bottom:10px;padding-top:10px}
 #sidebar1 .title_back {background:url(/assets/title_back.jpg) no-repeat top}
