change name russian image to english

--- a/app/views/home/gratitude.html.erb
+++ b/app/views/home/gratitude.html.erb
@@ -1,17 +1,17 @@
 <!-- #mainContent -->
 <!-- 	<div id="mainContent"> -->
-	<p><img src="/assets/евразийский суд.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/es.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/министерство здравоохранения.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/mz.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/министерство культуры.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/mk.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/отзыв гху.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/og.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/отзыв министерство архитектуры и строительства.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/omais.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/пуховичский комбинат хлебопродуктов.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/pkh.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/управление делами президента.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/ydp.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/управления образования.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>	
+	<p><img src="/assets/yo.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>	
