change format image jpeg to jpg

--- a/app/views/home/gratitude.html.erb
+++ b/app/views/home/gratitude.html.erb
@@ -1,17 +1,17 @@
 <!-- #mainContent -->
 <!-- 	<div id="mainContent"> -->
-	<p><img src="/assets/es.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/es.jpg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/mz.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/mz.jpg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/mk.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/mk.jpg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/og.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/og.jpg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/omais.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/omais.jpg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/pkh.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/pkh.jpg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/ydp.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
+	<p><img src="/assets/ydp.jpg" align="center" width="550" height="800" alt="Мембранная кровля"></p>
 
-	<p><img src="/assets/yo.jpeg" align="center" width="550" height="800" alt="Мембранная кровля"></p>	
+	<p><img src="/assets/yo.jpg" align="center" width="550" height="800" alt="Мембранная кровля"></p>	
